[package]
name = "urad-ingester"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
anyhow = "1.0.93"
actix-web = { version = "4.9.0" }
windows-service = "0.7.0"